# DrawingBoard

./: .gitignore  CMakeLists.txt  README.md  board.cpp  board.h  boardprivate.h  config.cpp  config.h  dbapplication.cpp  dbapplication.h  drawer.cpp  drawer.h  drawerprivate.h  main.cpp  pen.cpp  pen.h  preview.cpp  preview.h  res.qrc  settingview.cpp  settingview.h  settingview.ui  tools.cpp  tools.h  translator.cpp  translator.h  trayicon.cpp  trayicon.h
Components/: CMakeLists.txt  capabilitybutton.cpp  capabilitybutton.h
Script/: Info.plist  build.py  bundle.py
cmake/: qt_toolchain.cmake
res/: DrawingBoard.icns  i18n.qrc
res/i18n/: English.json  简体中文.json
